# HyperSwap

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/api/: auth.rs  files.rs  mod.rs  organizations.rs  secret_requests.rs  secrets.rs
backend/src/crypto/: validation.rs
backend/src/database/: connection.rs  mod.rs  organization_repository.rs  secret_repository.rs  secret_request_repository.rs  user_repository.rs
backend/src/handlers/: auth_handler.rs  file_handler.rs  mod.rs  organization_handler.rs  secret_handler.rs  secret_request_handler.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs
backend/src/models/: mod.rs  organization.rs  secret.rs  secret_request.rs  user.rs
backend/src/services/: auth_service.rs  file_service.rs  mod.rs  organization_service.rs  secret_request_service.rs  secret_service.rs
backend/src/storage/: mod.rs  s3_client.rs
backend/src/utils/: mod.rs  time.rs  token.rs
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  crypto.ts
frontend/src/pages/: CreateSecret.tsx  Dashboard.tsx  Home.tsx  Login.tsx  ViewSecret.tsx
