[package]
name = "hyperswap-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }

# S3 Storage
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# OAuth
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }

# JWT
jsonwebtoken = "9.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
argon2 = "0.5"
sha2 = "0.10"

# Async runtime
futures = "0.3"

# Base64 encoding
base64 = "0.21"

# Password hashing (if needed)
bcrypt = "0.15"

# Random number generation
rand = "0.8"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "offline"] }

